add blog version table
